K8s/Ingress/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: exam
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: api.aseds.inpt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
